Fix compiler warnings (Bug#31466).